modified auth-service